# iot_projet

./: README.md  docker-compose.yml
G7_2022_exam-main/: Makefile  Procfile  alembic.ini  buildpack.toml  docker-compose.yml  pyproject.toml  requirements.txt
G7_2022_exam-main/app/: README.md  config.py  crud.py  database.py  main.py  models.py  schemas.py
G7_2022_exam-main/app/templates/: create.html  dashboard.html  edit.html  login.html
G7_2022_exam-main/db-migration/: env.py
G7_2022_exam-main/db-migration/versions/: b9533c871f62_.py  bdee1480419e_.py  c0c777f9d21c_.py
G7_iot_ML/: config.py  identification.py  main.py  objectDetection.py  serverConnector.py  train.py
